Backport 350 to V10: khiops launches very slowly on windows e buro
Report minimaliste de la PR https://github.com/KhiopsML/khiops/pull/439
Uniquement la partie essentielle des deux points de commit:
- Fix slow launch of the Khiops GUI on Windows
- Update java code in normGUI to avoid use of deprecated java features

Le code java a diverge en V11 (en particulier pour le nouveau style "PopupMenu" des Actions):
il n'est pas possible de partager le meme code entre les versions 10 et 11